# MCI_Lab

./: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  lab3_last_task.ioc
Core/Src/: main.c
cmake/stm32cubemx/: cmake_install.cmake
lab2_arham/: CMakeLists.txt
lab2_arham/Lab2/: .mxproject  CMakeCache.txt  Lab2.ioc  build.ninja  cmake_install.cmake  compile_commands.json
lab2_arham/Lab2/Core/Src/: main.c  stm32f3xx_hal_msp.c
lab2_arham_new/lab2/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  lab2.ioc
lab2_arham_new/lab2/Core/Src/: main.c
lab3new1/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  lab3new1.ioc
lab3new1/Core/Src/: main.c
lab3new1/cmake/stm32cubemx/: cmake_install.cmake
